fixed height on iphone x

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@
 
 .slide {
     height: 100vh;
+    @supports (top: env(safe-area-inset-top)){
+        height: calc(100vh + env(safe-area-inset-top) + env(safe-area-inset-bottom));
+    }
+
     position: relative;
 
     @supports( padding-top: max(0px)) {
